[gd_scene load_steps=3 format=3 uid="uid://f6pue0vf4a7p"]

[ext_resource type="Script" path="res://input/input_map.gd" id="1_rh5kp"]
[ext_resource type="PackedScene" uid="uid://b6hfjsdk5nre2" path="res://control/tree.tscn" id="2_ud8cu"]

[node name="InputMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rh5kp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tree" parent="HBoxContainer" instance=ExtResource("2_ud8cu")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tree2" parent="HBoxContainer" instance=ExtResource("2_ud8cu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[connection signal="item_selected" from="HBoxContainer/Tree" to="." method="_on_tree_item_selected"]
